--- a/src/tags.yaml
+++ b/src/tags.yaml
@@ -3622,6 +3622,91 @@
     The time when this status was created.  It is a decimal [Unix
     timestamp](glossary:Unix-Timestamp) string.
 
+- name: /sys/team
+  description: |
+    The team status.  This describes the current status of all registers
+    whether locally measured or obtained from a remote device.
+
+- name: /sys/team/lag
+  x-schema:
+    example: 0.195
+  description: |
+    The number of seconds the register values are lagging behind real
+    time.  If all remote devices are online and responsive, lag should
+    typically be less than 500 milliseconds.
+
+- name: /sys/team/fft
+  description: |
+    The status of the FFT calculations.
+
+- name: /sys/team/fft/last_update
+  x-schema:
+    example: "1708030925.1"
+  description: |
+    The [Unix timestamp](glossary:Unix-Timestamp) of when the FFT
+    calculations were updated most recently.  If `null`, it indicates
+    that no FFT calculations are being performed.  If not `null`, the
+    timestamp typically lags behind the current time by a couple of
+    seconds because FFTs cannot be calculated in real time.
+
+- name: /sys/team/reg
+  x-path-var:
+    name: name
+    in: path
+    description: |
+      The register name.
+    required: true
+    schema:
+      type: string
+  x-schema:
+    example: {"Grid":{"available":true,"last":{"update":"1708042434","val":"1190154529"},"excess":"0"},"SolarSPR":{"available":true,"last":{"update":"1708042434","val":"12510606428"},"excess":"0"}}
+
+- name: /sys/team/reg/{name}
+  description: |
+    The current status of the register.
+
+- name: /sys/team/reg/{name}/available
+  description: |
+    True if the register has an up-to-date value.  If false, it typically
+    means that the (remote) device measuring its value is not
+    reachable at the moment.
+
+- name: /sys/team/reg/{name}/excess
+  x-schema:
+    example: "0"
+  description: |
+    The pending amount of excess for this register.  For locally
+    measured registers and discrete registers, this is always zero.
+    For remote registers, this becomes non-zero if the rate of change
+    to be recorded is outside of the actual rate plus/minus 10%.  This
+    is being done to prevent recording big spikes when a remote device
+    is offline for some time and then comes back online.  Instead of
+    recording a big jump, an excess is recorded which will then be
+    played back over time by inflating (or deflating) the recorded
+    rate by up to +/-10% of the actual rate until the excess has been
+    drained.  The excess of all registes can be reset to zero with the
+    [clear](op:/cmd:cmdClearPost) command.
+
+- name: /sys/team/reg/{name}/last
+  description: |
+    The info for the most recent (last) update to the register.
+
+- name: /sys/team/reg/{name}/last/update
+  x-schema:
+    example: "1708042434"
+  description: |
+    The decimal [Unix timestamp](glossary:Unix-Timestamp) of when this
+    register was last updated.
+
+- name: /sys/team/reg/{name}/last/val
+  x-schema:
+    example: "-9767738213"
+  description: |
+    The current value of the register as signed 64-bit integer
+    converted to a decimal string.  Except for discrete registers,
+    this is an accumulated value (see Section [Type
+    Codes](glossary:Type-Codes) for details).
+
 - name: /sys/time
   x-schema:
     example: "1679104389.095469"
