src: Makefile: add "preview" target
Just so we don't have to remember the command to preview the docs.

--- a/src/Makefile
+++ b/src/Makefile
@@ -46,6 +46,9 @@ url-domains.json: ALWAYS
 	( cmp -s $@ $$tmp || cp $$tmp $@ );	\
 	rm -f $$tmp
 
+preview: ALWAYS
+	redocly preview-docs
+
 clean: ALWAYS
 	rm -f $(BUILT_PATHS)
 
