--- a/src/tags.yaml
+++ b/src/tags.yaml
@@ -3514,6 +3514,16 @@
     command](op:/cmd:cmdReboot) should be issued at the
     next opportune moment.
 
+- name: /sys/remote
+  description: |
+    Get the status of remote devices.
+
+- name: /sys/remote/slowd
+  x-schema:
+    $ref: "./schemas.yaml#/SlowdStatusObject"
+  description: |
+    The status of slowd (serial) devices.
+
 - name: /sys/sn
   x-schema:
     example: G10400
