--- a/src/paths.yaml
+++ b/src/paths.yaml
@@ -2114,7 +2114,7 @@
         The `fmt` string is used only when query parameter
         `format=csv` is in effect.  In that case, `fmt` defines how
         timestamps are output in the CSV response.  By default, the
-        format string `"%F %T"` is used, which would output July 6,
+        format string `%F %T` is used, which would output July 6,
         2016 4:56pm as `2016-07-06 16:56:00`.  The full syntax
         available in the format string is documented in function
         [strftime()](https://man7.org/linux/man-pages/man3/strftime.3.html).
