src: Makefile: don't delete existing url-domains.json by accident
If a new url-domains.json cannot be generated, we should use the
existing one, not overwrite it with an empty file.

--- a/src/Makefile
+++ b/src/Makefile
@@ -43,6 +43,7 @@ $(TARGET): built $(BUILT_PATHS) $(SRC_FILES)
 url-domains.json: ALWAYS
 	-@tmp=$$(mktemp);			\
 	$(PRINT_URL_DOMAINS) | jq > $$tmp &&	\
+	[ -s $$tmp ] &&				\
 	( cmp -s $@ $$tmp || cp $$tmp $@ );	\
 	rm -f $$tmp
 
