src: move /sys/remote/slowd to /sys/slowd
On second thought, it makes more sense to place the slowd status info
directly in /sys.  That way, we could use /sys/remote/DEVNAME to
return the status of a remote device in the future.

--- a/src/paths.yaml
+++ b/src/paths.yaml
@@ -2175,12 +2175,12 @@
             schema:
               $ref: "./schemas.yaml#/UnauthorizedObject"
 
-/sys/remote/slowd:
+/sys/slowd:
   get:
     tags:
-    - /sys/remote
+    - /sys/slowd
     summary: Get slowd status
-    operationId: sysRemoteSlowd
+    operationId: sysSlowd
     description: |
       Get the status of the slowd (serial device) service.
     responses:
