--- a/src/tags.yaml
+++ b/src/tags.yaml
@@ -2643,6 +2643,9 @@
 
 - name: /store
   description: |
+    **Note** _This service is deprecated and will be removed in the
+      future.  Please use [/config/var](path:/config/var) instead._
+
     This service provides the ability to store arbitrary name/value
     pairs on the meter.  This is called server-side storage.
 
@@ -2698,12 +2701,6 @@
         be a multi character string, such as `CHF` for Swiss Franc.
         The meter firmware uses the value of this variable when
         outputting the unit of monetary values.
-
-    ## Size Limits
-
-    Section names are limited to 64 bytes.  The total size of any
-    section may not exceed 16 KiB.  The total size of the data in the
-    store may not exceed 128 KiB.
 
 - name: /register
   description: |
