tags.yaml: /config/push/service only allows GET and DELETE
Any other service needs to be established via /cmd/activate.

--- a/src/tags.yaml
+++ b/src/tags.yaml
@@ -1863,6 +1863,7 @@
     This resource is write-only.
 
 - name: /config/push/service
+  x-path-methods: [get, delete]
   description: |
     The name of a push service provider to shared data with.
 
