src: paths.yaml: document DELETE /api/ctid added by v4.7beta3

--- a/src/paths.yaml
+++ b/src/paths.yaml
@@ -983,6 +983,30 @@
           application/json:
             schema:
               $ref: "./schemas.yaml#/UnauthorizedObject"
+  delete:
+    tags:
+    - /ctid
+    summary: Delete CTid® info of all sensors
+    operationId: ctidDelete
+    description: |
+      Delete the CTid® info of all sensor ports from the meter.
+      This also terminates any pending `scan` or `flash` operations.
+
+      The CTid® info stored in the sensor is not affected by this
+      operation.
+    responses:
+      "200":
+        description: CTid® delete response.
+        content:
+          application/json:
+            schema:
+              $ref: "./schemas.yaml#/StatusObject"
+      "401":
+        description: Unauthorized response.
+        content:
+          application/json:
+            schema:
+              $ref: "./schemas.yaml#/UnauthorizedObject"
 
 /ctid/{port}:
   parameters:
