src: tags.yaml: /config/time/zone fix DELETE description for real now

--- a/src/tags.yaml
+++ b/src/tags.yaml
@@ -2162,7 +2162,9 @@
 - name: /config/time/zone
   x-path-method-delete:
     description: |
-      Reset to [`UTC`](https://en.wikipedia.org/wiki/Coordinated_Universal_Time)  x-schema:
+      Reset to
+      [`UTC`](https://en.wikipedia.org/wiki/Coordinated_Universal_Time).
+  x-schema:
     example: "LST7LDT6,M3.2.0/02:00,M11.1.0/02:00"
   description: |
     The timezone the meter is located in.  The string is interpreted
