src: paths.yaml: correct minimum array lengths
/ctid: The `info` array in the PUT request body must by non-empty.

 Conflicts:
	src/paths.yaml

--- a/src/paths.yaml
+++ b/src/paths.yaml
@@ -699,6 +699,7 @@
             properties:
               info:
                 type: array
+                minItems: 1
                 items:
                   $ref: "./schemas.yaml#/CTidInfoObject"
     responses:
