--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
-[tool.black]
+[tool.ruff]
 line-length = 79
-extend-exclude = "/gui/"
+
+[tool.ruff.lint]
+extend-select = ["I", "SLF"]
+ignore = ["E741"]
