bin/build_openapi.py: add support for redocly "Reunite" link format
Link anchors are quite different for the new "Reunit" redoc product so
this commit includes updates to all operation (op:PATH:METHOD) links.
Fortunately, there aren't too many of these and the new format allows
us to generate both the old and new formats.

For this to work, a couple of operationId tags had to be updated as
well so they fit with the new requirements.

The final openapi.yaml is now placed in the "output" directory
(instead of the top-level directory).  This makes it easier to import
just the output into Reunite.

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,10 +9,10 @@ SRC_FILES = openapi.yaml params.yaml paths.yaml schemas.yaml tags.yaml \
 BUILT_FILES = schemas params paths tags
 BUILT_PATHS = $(foreach f,$(BUILT_FILES),built/$f.yaml)
 
-TARGET = built/openapi.yaml
+TARGET = ../output/openapi.yaml
 
 # Use "make LINK_FORMAT=redocly-preview" for previewing
-LINK_FORMAT := redocly-hosted
+LINK_FORMAT := redocly-reunite
 
 all: $(TARGET)
 
@@ -38,7 +38,7 @@ built/tags.yaml: $(SRC_FILES) ../bin/build_openapi.py
 	$(BUILD_OPENAPI) -l $(LINK_FORMAT) -o built
 
 $(TARGET): built $(BUILT_PATHS) $(SRC_FILES)
-	$(BUNDLE) > $(TARGET) && cp $(TARGET) ..
+	$(BUNDLE) > $(TARGET)
 
 url-domains.json: ALWAYS
 	-@tmp=$$(mktemp);			\
