bin/build_openapi.py: add support for redocly "Reunite" link format
Link anchors are quite different for the new "Reunit" redoc product so
this commit includes updates to all operation (op:PATH:METHOD) links.
Fortunately, there aren't too many of these and the new format allows
us to generate both the old and new formats.

For this to work, a couple of operationId tags had to be updated as
well so they fit with the new requirements.

The final openapi.yaml is now placed in the "output" directory
(instead of the top-level directory).  This makes it easier to import
just the output into Reunite.

--- a/src/paths.yaml
+++ b/src/paths.yaml
@@ -315,7 +315,7 @@
     tags:
     - /cmd
     summary: Manipulate database
-    operationId: cmdDB
+    operationId: cmdDbPost
     description: |
       This command supports restoring the database from a backup file,
       zeroing of all or parts of the database, as well as splitting
@@ -408,8 +408,8 @@
   post:
     tags:
     - /cmd
-    summary: Restore factory settings.
-    operationId: cmdFactoryRestore
+    summary: Restore factory settings
+    operationId: cmdFactoryRestorePost
     description: |
       Restore the factory settings and reboot the meter.
 
@@ -432,8 +432,8 @@
   post:
     tags:
     - /cmd
-    summary: Reboot the meter.
-    operationId: cmdReboot
+    summary: Reboot the meter
+    operationId: cmdRebootPost
     description: |
       Initiate a reboot of the meter. The actual reboot command is
       delayed by one second to increase the likelihood that the reply
@@ -465,8 +465,8 @@
   post:
     tags:
     - /cmd
-    summary: Set date and time.
-    operationId: cmdSetTime
+    summary: Set date and time
+    operationId: cmdSetTimePost
     description: |
         Optionally set the date/time of the meter and restart the NTP
         and/or the PTP services, if configured.
@@ -498,8 +498,8 @@
   post:
     tags:
     - /cmd
-    summary: Update the meter.
-    operationId: cmdUpdate
+    summary: Update the meter
+    operationId: cmdUpdatePost
     description: |
         Update the meter firmware or kernel.
     requestBody:
@@ -573,8 +573,8 @@
   post:
     tags:
     - /cmd
-    summary: Manage WLAN (WiFi) connection.
-    operationId: cmdWLAN
+    summary: Manage WLAN (WiFi) connection
+    operationId: cmdWlanPost
     description: |
       Manage WLAN (Wi-Fi) connection.  See
       [/sys/net/wlan](path:/sys/net/wlan) to get the currently
