--- a/src/tags.yaml
+++ b/src/tags.yaml
@@ -179,7 +179,7 @@
     their side effects, such as rebooting the meter.  Unless stated
     otherwise, the resources in this service are available only to
     users with the save right (see
-    [/auth/rights](op:/auth:authRightsGet)).
+    [/auth/rights](op:/auth/rights:get)).
 
 - name: /config
   x-path-methods: [get, put, post, delete]
@@ -548,7 +548,7 @@
     alerts.
 
     To set this to a non-empty value please use the [service
-    activation command](op:/cmd:cmdActivate) since that ensures the
+    activation command](op:/cmd/activate:post) since that ensures the
     service provider knows to expect alerts from this meter.  The body
     of the activation request should contain member `service` set to
     the string `alert` and `provider` set to name of the desired
@@ -1868,7 +1868,7 @@
     The name of a push service provider to shared data with.
 
     To set this to a non-empty value please use the [service
-    activation command](op:/cmd:cmdActivate) since that ensures the
+    activation command](op:/cmd/activate:post) since that ensures the
     push provider knows to expect data from this meter.  The body of
     the activation request should contain member `service` set to the
     string `push` and `provider` set to name of the desired push
@@ -2294,7 +2294,7 @@
 
       * `billing.interval`: The meter firmware interprets this as the
         length of the demand interval in minutes (see description of
-        [/register](op:/register:registerGet) query parameter
+        [/register](op:/register:get) query parameter
         `demand`).
 
       * `billing.start_day`: The meter firmware interprets this as the
@@ -2387,7 +2387,7 @@
     this service primarily during device setup.
 
     All methods other than `GET` required a user with the [save
-    right](op:/auth:authRightsGet).
+    right](op:/auth/rights:get).
 
     ## Python Example
 
@@ -2586,7 +2586,7 @@
     Provides access to various logs.  Since logs may contain sensitive
     information, this service is available only to users with the
     `save` privilege (see
-    [/auth/rights](op:/auth:authRightsGet)).
+    [/auth/rights](op:/auth/rights:get)).
 
 - name: /lua
   x-path-methods: [get, put, post, delete]
@@ -3722,7 +3722,7 @@
   description: |
     This is `true` if the meter needs to be rebooted, e.g., due to a
     configuration change.  If so, a [reboot
-    command](op:/cmd:cmdReboot) should be issued at the
+    command](op:/cmd/reboot:post) should be issued at the
     next opportune moment.
 
 - name: /sys/slowd
@@ -3907,7 +3907,7 @@
     played back over time by inflating (or deflating) the recorded
     rate by up to +/-10% of the actual rate until the excess has been
     drained.  The excess of all registes can be reset to zero with the
-    [clear](op:/cmd:cmdClearPost) command.
+    [clear](op:/cmd/clear:post) command.
 
 - name: /sys/team/reg/{name}/last
   description: |
@@ -4504,7 +4504,7 @@
 
     The setup mechanism is called *service activation* and is
     initiated by posting a request to end-point
-    [/cmd/activate](op:/cmd:cmdActivate).  The command, in turn,
+    [/cmd/activate](op:/cmd/activate:post).  The command, in turn,
     executes the follow steps:
 
       1) Meter sends an activation request to a URL defined by the
