--- a/src/tags.yaml
+++ b/src/tags.yaml
@@ -1131,8 +1131,8 @@
     example: print("this is the tariff script");
   description: |
     The Lua script used to calculate energy cost.  This script can be
-    modified only if [server-storage](path:/store) variable
-    `global/billing/tariff_uri` is empty or unset.
+    modified only if [server-storage](path:/config/var) variable
+    `global.billing.tariff_uri` is empty or unset.
 
     If loading this script takes longer than 15 seconds or evaluating
     the register formulas takes longer than half the
@@ -2667,67 +2667,6 @@
     connection is generally required in order for this service to work
     properly.
 
-- name: /store
-  description: |
-    **Note** _This service is deprecated and will be removed in the
-      future.  Please use [/config/var](path:/config/var) instead._
-
-    This service provides the ability to store arbitrary name/value
-    pairs on the meter.  This is called server-side storage.
-
-    The service implements a hierarchical name-space, with hierarchy
-    levels separated by slash characters (`/`). The top-level is
-    called a section, intermediate levels are called paragraphs, and
-    leaves are called variables. For example, the path
-    `global/default/currency_code` refers to variable `currency_code`
-    in section `global`, paragraph `default`.
-
-    Variables may also be stored at the section level.  The last
-    character of a URL determines whether the URL refers to a
-    section-level variable or a paragraph.  If the URL ends with a
-    slash character (`/`), it refers to a paragraph, otherwise, it refers
-    to a section-level variable.
-
-    Names may contain lower- and upper-case ASCII letters, digits,
-    dashes (`-`), underscores (`_`), and percent signs (`%`).
-
-    Variable values may contain any UTF-8 codes except ASCII control
-    codes (codes less than 0x20). Some variables may be defined as
-    storing JSON-encoded values. For those, the value is limited to
-    characters permissible by the [JSON grammar](https://www.json.org/).
-
-    ## Well-known Variables
-
-    What distinguishes server-storage variables from configuration
-    settings is that the former are generally not used by the meter
-    firmware. In other words, server-storage variables are used
-    primarily by users of the WebAPI.  There are a few exceptions
-    however:
-
-      * `global/billing/start_day`: The meter firmware interprets this
-        as the day of the month on which the utility company reads the
-        utility meter.  The assumption is that the meter is read at
-        noon on that day.  The value must be a decimal integer string
-        in the range from 1-31.  If the billing day number is greater
-        than the number of days in a particular month, it is assumed
-        that utility meter is read on the last day of that month.
-
-        The meter-firmware uses this, for example, to implement the
-        `sob` [time point](glossary:Time-Point-Names).
-
-      * `global/billing/tariff_uri`: If not an empty string, this is
-        interpreted as the URL from which to fetch a [Lua
-        script](glossary:Lua-Scripts) that calculates energy
-        cost.  The meter will periodically poll this URL and download
-        any available updates to the script.
-
-      * `global/default/currency_symbol`: This is interpreted as the
-        symbol to use for currency values.  This may be a single
-        Unicode symbol such as `$` (Dollar) or `€` (Euro), or it may
-        be a multi character string, such as `CHF` for Swiss Franc.
-        The meter firmware uses the value of this variable when
-        outputting the unit of monetary values.
-
 - name: /register
   description: |
     This service provides access to both current and past register
@@ -2874,6 +2813,67 @@
 - name: /remote
   description: |
     *To be implemented.*
+
+- name: /store
+  description: |
+    **Note** _This service is deprecated and will be removed in the
+      future.  Please use [/config/var](path:/config/var) instead._
+
+    This service provides the ability to store arbitrary name/value
+    pairs on the meter.  This is called server-side storage.
+
+    The service implements a hierarchical name-space, with hierarchy
+    levels separated by slash characters (`/`). The top-level is
+    called a section, intermediate levels are called paragraphs, and
+    leaves are called variables. For example, the path
+    `global/default/currency_code` refers to variable `currency_code`
+    in section `global`, paragraph `default`.
+
+    Variables may also be stored at the section level.  The last
+    character of a URL determines whether the URL refers to a
+    section-level variable or a paragraph.  If the URL ends with a
+    slash character (`/`), it refers to a paragraph, otherwise, it refers
+    to a section-level variable.
+
+    Names may contain lower- and upper-case ASCII letters, digits,
+    dashes (`-`), underscores (`_`), and percent signs (`%`).
+
+    Variable values may contain any UTF-8 codes except ASCII control
+    codes (codes less than 0x20). Some variables may be defined as
+    storing JSON-encoded values. For those, the value is limited to
+    characters permissible by the [JSON grammar](https://www.json.org/).
+
+    ## Well-known Variables
+
+    What distinguishes server-storage variables from configuration
+    settings is that the former are generally not used by the meter
+    firmware. In other words, server-storage variables are used
+    primarily by users of the WebAPI.  There are a few exceptions
+    however:
+
+      * `global/billing/start_day`: The meter firmware interprets this
+        as the day of the month on which the utility company reads the
+        utility meter.  The assumption is that the meter is read at
+        noon on that day.  The value must be a decimal integer string
+        in the range from 1-31.  If the billing day number is greater
+        than the number of days in a particular month, it is assumed
+        that utility meter is read on the last day of that month.
+
+        The meter-firmware uses this, for example, to implement the
+        `sob` [time point](glossary:Time-Point-Names).
+
+      * `global/billing/tariff_uri`: If not an empty string, this is
+        interpreted as the URL from which to fetch a [Lua
+        script](glossary:Lua-Scripts) that calculates energy
+        cost.  The meter will periodically poll this URL and download
+        any available updates to the script.
+
+      * `global/default/currency_symbol`: This is interpreted as the
+        symbol to use for currency values.  This may be a single
+        Unicode symbol such as `$` (Dollar) or `€` (Euro), or it may
+        be a multi character string, such as `CHF` for Swiss Franc.
+        The meter firmware uses the value of this variable when
+        outputting the unit of monetary values.
 
 - name: /sys
   x-path-methods: [get]
@@ -4727,8 +4727,8 @@
         which `t` falls.
 
       * `sob(t)`: Returns the timestamp of the start of the billing
-      cycle in which `t` falls.  [Server-storage](path:/store)
-      variable `global/billing/start_day` establishes the day of the
+      cycle in which `t` falls.  [Server-storage](path:/config/var)
+      variable `global.billing.start_day` establishes the day of the
       month a new billing period starts.  If that day is greater than
       the number of days in the current month, the last day of that
       month is taken as the start of the billing period.  The new
@@ -4983,8 +4983,8 @@
     **Note** For the monetary unit, `${currency}` should be replaced
     by the the currency symbol applicable to the region the meter is
     installed in.  The builtin user interface of the meter uses the
-    value of [server-storage](path:/store) variable
-    `global/default/currency_symbol` for this purpose or, if
+    value of [server-storage](path:/config/var) variable
+    `global.default.currency_symbol` for this purpose or, if
     undefined, a dollar sign (`$`).
 
     ## Unix Timestamp
